manifests/unbound.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unbound
  labels:
    app: unbound
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unbound
  template:
    metadata:
      labels:
        app: unbound
    spec:
      containers:
        - name: unbound
          image: mvance/unbound:latest
          ports:
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: unbound
spec:
  type: ClusterIP
  selector:
    app: unbound
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
